# oneepis

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE.md  OWNERSHIP.md  README.md  SECURITY.md  package-lock.json  package.json
.github/: CODEOWNERS  (+1 more)
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/scripts/: export_openapi.py  export_patient_scoped_route_inventory.py  hash_password.py
apps/api/tests/: access_boundary_helpers.py  conftest.py  patient_ai_helpers.py  test_access_boundary_contract.py  test_access_context_audit.py  test_access_context_contract.py  test_access_policy_inventory.py  test_ai_eval_synthetic.py  test_ai_provider.py  test_allergy_audit.py  test_appointments.py  test_audit_integrity_contract.py  test_audit_retention_contract.py  test_audit_snapshot.py  test_auth.py  test_auth_session_contract.py  test_backup_restore_contract.py  test_break_glass_guard.py  test_clinical_access_contract.py  test_clinical_act_unit_of_work.py  test_clinical_governance_contract.py  test_clinical_orders.py  test_clinical_scenarios.py  test_clinical_write_access_contract.py  test_config.py  test_diagnostic_references.py  test_document_custody_contract.py  test_encounters.py  test_encryption_at_rest_contract.py  test_external_ai_contract.py  test_health.py  test_hospital_beds.py  test_hospital_daily_sheets.py  test_hospital_draft_abac_enforcement.py  test_hospital_indications.py  test_hospitalization.py  test_hospitalization_active_abac_enforcement.py  test_hospitalization_board.py  test_hospitalization_read_audit.py  (+45 more)
(+562 files in other folders)
