[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oneepis-api"
version = "0.1.0"
description = "Clinical API for OneEpis."
requires-python = ">=3.12,<3.13"
authors = [
  { name = "Gabriel Tesser" }
]
license = { text = "Proprietary - OneEpis was created by Gabriel Tesser and is owned by EPIONE. Copyright (c) 2026 EPIONE. All rights reserved." }
dependencies = [
  "alembic>=1.13,<2.0",
  "fastapi>=0.115,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "python-dotenv>=1.0,<2.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=9.0.3,<10.0",
  "ruff>=0.6,<1.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
oneepis_api = ["data/*.json"]

[tool.pytest.ini_options]
pythonpath = ["apps/api/src"]
testpaths = ["apps/api/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.oneepis.ownership]
creator = "Gabriel Tesser"
owner = "EPIONE"
notice = "OneEpis was created by Gabriel Tesser and is owned by EPIONE."
copyright = "Copyright (c) 2026 EPIONE. All rights reserved."
